exported_metadata/main/default/objects/Review_Action_Set__c/Review_Action_Set__c.object-meta.xml
<CustomObject>
    <label>Review Action Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Action Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>