exported_metadata/main/default/objects/Review_Action_Set__c/fields/Decision_Status__c.field-meta.xml
<CustomField>
    <fullName>Decision_Status__c</fullName>
    <label>Decision Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>