exported_metadata/main/default/objects/Review_Action_Set__c/fields/Review_Category__c.field-meta.xml
<CustomField>
    <fullName>Review_Category__c</fullName>
    <label>Review Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>