exported_metadata/main/default/objects/Review_Action_Set__c/fields/Review_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Review_Timestamp__c</fullName>
    <label>Review Timestamp</label>
    <type>DateTime</type>
</CustomField>