exported_metadata/main/default/objects/Review_Action_Set__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Review_Action_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>